tests/encaps/encaps.exp
Error: encaps.js:3
  3: var s1 = `l${a.x}r`; // error: no prop x in A
                    ^ property `x`. Property not found in
  3: var s1 = `l${a.x}r`; // error: no prop x in A
                  ^ A

Error: encaps.js:6
  6:     var x:number = strings[0]; // error: string ~> number
                        ^^^^^^^^^^ string. This type is incompatible with
  6:     var x:number = strings[0]; // error: string ~> number
               ^^^^^^ number

Error: encaps.js:16
 16: (s3.foo: number); // error: string ~> number
      ^^^^^^ Cannot cast property `foo` to number because string [1] is incompatible with number [2].
  References:
   16: (s3.foo: number); // error: string ~> number
        ^^^^^^ [1]: string
   16: (s3.foo: number); // error: string ~> number
                ^^^^^^ [2]: number


Found 3 errors
